--- a/src/sass/components/_popup.scss
+++ b/src/sass/components/_popup.scss
@@ -7,6 +7,7 @@
   height: 44px;
   transform: translate(-26%, -30%) scale(1);
   opacity: 0;
+  top: 0;
   border-radius: 100%;
   &_active{
     opacity: 1;
