--- a/src/sass/components/_fonts.scss
+++ b/src/sass/components/_fonts.scss
@@ -38,6 +38,7 @@ h2.title_section{
   line-height: 72px;
   letter-spacing: -0.02em;
   color: #000000;
+  margin-bottom: 40px;
 }
 
 .phone{
@@ -52,3 +53,6 @@ h2.title_section{
 
 }
 
+*{
+  text-transform: none;
+}
