--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,6 +14,11 @@
 @import "components/card";
 @import "components/news";
 @import "components/contact";
+
+//MEDIA
+
+@import "media_components/info_media";
+@import "media_components/all_media";
 *{
   padding: 0;
   margin: 0;
