--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,6 +14,7 @@
 @import "components/card";
 @import "components/news";
 @import "components/contact";
+@import "components/detail_item";
 
 //MEDIA
 
