--- a/src/sass/components/_main_section.scss
+++ b/src/sass/components/_main_section.scss
@@ -145,7 +145,7 @@ wrapper_menu_list{
           transform: translateX(300%);
           text-align: left;
           width: calc(310%);
-          top: -15px;
+          top: calc(-15px);
           z-index: -1;
           li{
             text-align: left;
@@ -226,8 +226,7 @@ wrapper_menu_list{
       width: 100%;
       left: 0;
       .contact_txt{
-
-        top: -130px;
+        top: calc(0px - 250px);
         position: absolute;
         left: 100%;
         width: calc(100% * 5 + 100px);
