--- a/src/sass/components/_light_theme.scss
+++ b/src/sass/components/_light_theme.scss
@@ -77,46 +77,46 @@
       .active_el{
         .contact_txt{
           .title{
-            color: #000;
+            color: #7b7781;
           }
           .sub_title{
-            color: #000;
+            color: #7b7781;
           }
 
           .adress_block{
             small{
-              color: #000;
+              color: #7b7781;
             }
             .txt{
-              color: #000;
+              color: #7b7781;
             }
           }
           .phones{
             a{
-              color: #000;
+              color: #7b7781;
               span{
-                color: #000;
+                color: #7b7781;
               }
             }
             small{
-              color: #000;
+              color: #7b7781;
             }
             .txt{
-              color: #000;
+              color: #7b7781;
             }
           }
           .email{
             a{
-              color: #000;
+              color: #7b7781;
               span{
-                color: #000;
+                color: #7b7781;
               }
             }
             small{
-              color: #000;
+              color: #7b7781;
             }
             .txt{
-              color: #000;
+              color: #7b7781;
             }
           }
         }
@@ -127,18 +127,18 @@
       .not_path{
          li{
            a{
-             color: #000;
+             color: #7b7781;
            }
          }
       }
       ul{
         li{
-          color: #000;
+          color: #7b7781;
 
           .sub_menu_el{
             li {
               a{
-                color: #000;
+                color: #7b7781;
               }
             }
           }
@@ -149,7 +149,7 @@
     .footer{
       .phone{
         a{
-          color: #000;
+          color: #7b7781;
           img{
             filter: invert(1);
           }
@@ -157,7 +157,7 @@
       }
 
       .copy{
-        color: #000;
+        color: #7b7781;
       }
     }
   }
