--- a/src/sass/components/_detail_item.scss
+++ b/src/sass/components/_detail_item.scss
@@ -27,6 +27,23 @@
             box-sizing: border-box;
             width: 100px !important;
             margin-bottom: 20px;
+            cursor: pointer;
+            position: relative;
+            &:hover{
+              &:before{
+                content: '';
+                position: absolute;
+                bottom: -5px;
+                right: 0;
+                border-radius: 8px;
+                z-index: -1;
+                top: 1px;
+                width: 94px;
+                height: 94px;
+                left: 3px;
+                background: linear-gradient(rgba(85, 69, 150 , .5), rgba(201, 44, 123, .5));
+              }
+            }
             &:before{
               content: '';
               position: absolute;
@@ -40,6 +57,7 @@
               height: 94px;
               left: 3px;
             }
+
             img{
               transform: translate(4px,2px);
               width: 90px;
@@ -49,8 +67,13 @@
           }
           .active{
             position: relative;
+            &:hover{
+              &:before{
+                background: linear-gradient(rgba(85, 69, 150 , 1), rgba(201, 44, 123, 1));
+              }
+            }
             &:before{
-              background: linear-gradient(#554596,#C92C7B);
+              background: linear-gradient(rgba(85, 69, 150 , 1), rgba(201, 44, 123, 1));
             }
           }
         }
